-- First commit from VSCode;

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ build
 sdkconfig
 sdkconfig.old
 sdkconfig.defaults
+.vscode/tasks.json
+.vscode/settings.json
+.vscode/launch.json
+.vscode/c_cpp_properties.json
+.DS_Store
